# chem_sop

./: .gitignore  LICENSE  README.md  pyproject.toml
chemsop/: __init__.py  app.py  database.py  sop_utils.py
chemsop/static/: pin-popup.js
chemsop/templates/: approve_request.html  base.html  edit_sop.html  index.html  manage_users.html  new_sop.html  setup.html  sops.html
