[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemsop"
version = "0.1.0"
dependencies = [
    "Flask>=3.0.0",
    "bcrypt>=4.1.2",
    "chemical_safety",
]

[project.scripts]
chemsop = "chemsop.app:main"

[tool.setuptools]
packages = ["chemsop"]

[tool.setuptools.package-data]
chemsop = ["static/**/*", "templates/**/*"]
